Test/7-30_cluster.clu
Cluster size 7
Cluster number 300107       # E:      Factor:7  P:  , Ori size:7    Sub:7    From:30          
   7    30    fam_8_2           2-137      1   leng: 135
   7    30    fam_8_3           2-138      1   leng: 136
   7    30    fam_8_4           2-139      1   leng: 137
   7    30    fam_8_5           2-134      1   leng: 132
   7    30    fam_8_6           2-139      1   leng: 137
   7    30    fam_8_7           1-125      1   leng: 124
   7    30    fam_8_8           2-127      1   leng: 125
